# adw_cpp_playground

./: .gitignore  CMakeLists.txt  README.md
include/data/: datacontainer.h  dataobject.h
src/: FunWithFunctors.hpp  HowToEnableIf.hpp  datacontainer.cpp  datacontainer.h  dataobject.cpp  dataobject.h  enumrange.hpp
test/: test_dataobject.cpp  test_enumrange.cpp  test_fun_with_functors.cpp  test_how_to_enable_if.cpp  test_template_bool.cpp
